# modorganizer-plugin_python

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  pyproject.toml  setup.cfg  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-and-test.yml  linting.yml
src/: CMakeLists.txt  plugin_python_en.ts  pythonrunner_en.ts
src/mobase/: CMakeLists.txt  README.md  deprecation.cpp  deprecation.h  mobase.cpp  pybind11_all.h
src/mobase/pybind11_utils/: functional.h  shared_cpp_owner.h
src/mobase/wrappers/: basic_classes.cpp  game_features.cpp  known_folders.h  pyfiletree.cpp  pyfiletree.h  pyplugins.cpp  pyplugins.h  utils.cpp  widgets.cpp  wrappers.cpp  wrappers.h
src/proxy/: CMakeLists.txt  INexusBridge.sip  SConscript  build_pythoncore.py  embedrunner.rc  error.cpp  error.h  interfaces.sbf  interfaces.sip  plugin_python_en.ts  proxyPython.pro  proxypluginwrappers.cpp  proxypluginwrappers.h  proxypython.cpp  proxypython.h  proxypython_global.h  pythonpluginwrapper.cpp  pythonpluginwrapper.h  pythontoolwrapper.cpp  pythontoolwrapper.h  resource.h  setup.cfg  setup.py  uibasewrappers.h
src/pybind11-qt/: CMakeLists.txt  README.md  pybind11_qt_basic.cpp  pybind11_qt_sip.cpp  pybind11_qt_utils.cpp
src/pybind11-qt/include/pybind11_qt/: pybind11_qt.h  pybind11_qt_basic.h  pybind11_qt_containers.h  pybind11_qt_enums.h  pybind11_qt_holder.h  pybind11_qt_objects.h  pybind11_qt_qflags.h
src/pybind11-qt/include/pybind11_qt/details/: pybind11_qt_enum.h  pybind11_qt_qlist.h  pybind11_qt_qmap.h  pybind11_qt_sip.h  pybind11_qt_utils.h
src/pybind11-utils/: CMakeLists.txt  README.md  functional.cpp
src/pybind11-utils/include/pybind11_utils/: arg_wrapper.h  functional.h  generator.h  shared_cpp_owner.h  smart_variant.h  smart_variant_wrapper.h
src/runner/: CMakeLists.txt  SConscript  converters.h  error.cpp  error.h  gamefeatureswrappers.cpp  gamefeatureswrappers.h  gilock.cpp  gilock.h  proxypluginwrappers.cpp  proxypluginwrappers.h  pycatch.h  pylogger.cpp  pylogger.h  pythonRunner.pro  pythonpluginwrapper.cpp  pythonpluginwrapper.h  pythonrunner.cpp  pythonrunner.h  pythonrunner_global.h  pythontoolwrapper.cpp  pythontoolwrapper.h  pythonutils.cpp  pythonutils.h  pythonwrapperutilities.h  shared_ptr_converter.h  sipApiAccess.h  sipapiaccess.cpp  sipapiaccess.h  tuple_helper.h  uibasewrappers.h  variant_helper.h
src/runner-boost/: converters.h  gamefeatureswrappers.cpp  gilock.h  pylogger.cpp  pylogger.h  pythonrunner.cpp  pythonrunner.h  sipapiaccess.cpp  uibasewrappers.h  widgets.cpp  widgets.h
src/runner-pybind11/: CMakeLists.txt  converters-old.h  converters.h  converters_qt.h  converters_qt_sip.cpp  converters_qt_sip.h  converters_utils.h  error.cpp  error.h  gamefeatureswrappers.cpp  gamefeatureswrappers.h  gilock.cpp  gilock.h  proxypluginwrappers.cpp  proxypluginwrappers.h  pybind11_all.h  pyfiletree.cpp  pyfiletree.h  pylogger.cpp  pylogger.h  pythonrunner.cpp  pythonrunner.h  pythonrunner_en.ts  pythonutils.cpp  pythonutils.h  pythonwrapperutilities.h  shared_ptr_converter.h  widgets.cpp
src/runner-pybind11/pybind11_qt/: pybind11_qt.h  pybind11_qt_basic.cpp  pybind11_qt_basic.h  pybind11_qt_containers.h  pybind11_qt_enums.h  pybind11_qt_holder.h  pybind11_qt_objects.h  pybind11_qt_qflags.h
src/runner-pybind11/pybind11_qt/details/: pybind11_qt_enum.h  pybind11_qt_qmap.h  pybind11_qt_sip.cpp  pybind11_qt_sip.h  pybind11_qt_utils.cpp  pybind11_qt_utils.h
src/runner-pybind11/wrappers/: basic_classes.cpp  game_features.cpp  plugins.cpp  pyfiletree.cpp  pyfiletree.h  pyplugins.cpp  pyplugins.h  uibase_wrappers.h  widgets.cpp  wrappers.cpp  wrappers.h
tests/: CMakeLists.txt  conftest.py  test_qt.cpp  test_qt.py  test_qt_widgets.cpp  test_qt_widgets.py
tests/mocks/: DummyFileTree.h  MockOrganizer.h
tests/python/: CMakeLists.txt  conftest.py  test_argument_wrapper.cpp  test_argument_wrapper.py  test_filetree.cpp  test_filetree.py  test_functional.cpp  test_functional.py  test_guessed_string.cpp  test_guessed_string.py  test_organizer.cpp  test_organizer.py  test_path_wrappers.py  test_qt.cpp  test_qt.py  test_qt_widgets.cpp  test_qt_widgets.py  test_shared_cpp_owner.cpp  test_shared_cpp_owner.py
tests/runner/: CMakeLists.txt  test_diagnose.cpp  test_filemapper.cpp  test_game.cpp  test_installer.cpp  test_iplugin.cpp  test_lifetime.cpp  test_organizer.cpp
tests/runner/plugins/: dummy-diagnose.py  dummy-filemapper.py  dummy-game.py  dummy-installer.py  dummy-iplugin.py
typings/: generate.py
typings/mobase_tests/: argument_wrapper.pyi  filetree.pyi  functional.pyi  guessed_string.pyi  organizer.pyi  qt.pyi  qt_widgets.pyi  shared_cpp_owner.pyi
